[tool.poetry]
name = "work"
version = "1.0.0"
description = ""
authors = ["龍 佐伯 <rsaeki@jscom.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
logging = "^0.4.9.6"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.3.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
